<resources>
    <string name="app_name">Insta_profile_page</string>
    <string name="Username">Manisha</string>
    <string name="Bio">Android Developer | Photography </string>
    <string name="Profileimg">Dp</string>
    <string name="menu">menu</string>
    <string name="Post">Post</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="Post_count">0</string>
    <string name="followers_count">0</string>
    <string name="following_count">0</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="Posts">Posts</string>
    <string name="Reels">Reels</string>
    <string name="Tagged">Tagged</string>
    <string name="Close">Close</string>
    <string name="Nopostsavailable">No posts available</string>
    <string name="backButton">Back Button</string>
    <string name="Menu">MenuImg</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>